Fix alignment of objects in preview pane.

--- a/src/assets/style/preview-pane.less
+++ b/src/assets/style/preview-pane.less
@@ -11,6 +11,10 @@
     align-items: center;
     justify-content: space-around;
 
+    .object {
+      margin: auto;
+    }
+
     .check,
     .assignment {
       padding: 10px;
